test/get-data-dependencies/parse-error/index.js
module.exports = function (renderer) {
  require('foo');

  return {ss
};